# mission-control

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  Makefile  PROJECT_ANALYSIS.md  README.md  config.toml  config_schema.json
.github/workflows/: build.yaml
app/: .gitignore  Cargo.toml
app/src/: chrome.rs  config.rs  main.rs  state.rs
app/src/api/: auth.rs  mod.rs  models.rs
app/src/chrome/: controller.rs  messages.rs  mod.rs
app/src/db/: mod.rs  models.rs
app/src/db/repositories/: mod.rs  playlist.rs  playlist_tab.rs  tab.rs
app/src/display/: mod.rs
app/src/http/: mod.rs
app/src/models/: hass.rs  mod.rs
app/src/models/hass/: entity.rs  mod.rs
docker/: dev-x11.Dockerfile
docs/: docker-dev.md
scripts/: run-x11docker.sh
web/: index.html  openapi-hooks.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: api.ts  playlists.ts  schema.gen.ts  tabs.ts
web/src/components/: AddTabDialog.tsx  CreatePlaylistDialog.tsx  EditTabDialog.tsx  EnhancedPlaylistCard.tsx  ProgressCircle.tsx  TabCard.tsx
web/src/hooks/: useActivatePlaylist.ts  useActivateTab.ts  useAddTabToPlaylist.ts  useCreatePlaylist.ts  useCreateTab.ts  useCurrentPlaylist.ts  useDeletePlaylist.ts  useDeleteTab.ts  useRecreateTab.ts  useRefreshTab.ts  useReorderTabs.ts  useStatus.ts  useToggleTabEnabled.ts  useUpdatePlaylist.ts  useUpdateTab.ts
web/src/pages/: App.tsx
web/src/sections/: PlaylistList.tsx
web/src/widgets/: PlaylistCard.tsx  TabList.tsx
