[package]
name = "v3x-mission-control"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-std = { version = "1.13.0", features = [
    "attributes",
    "tokio1",
    "unstable",
] }
dotenvy = "0.15.7"
futures = "0.3.31"
poem = { version = "3.1.5", features = ["rustls", "embed"] }
reqwest = { version = "0.12.9", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
], default-features = false }
rustls = "0.23.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10.19", features = ["toml", "json", "env"] }
rumqttc = "0.24.0"
chromiumoxide = "0.7.0"
base64 = "0.22.1"
async-stream = "0.3.6"
bytes = { version = "1.10.0", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["serde"] }
poem-openapi = { version = "5.1.15", features = ["static-files", "swagger-ui"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["macros", "rt", "rt-multi-thread", "sync"] }
rust-embed = "8.0.0"
mime_guess = "2.0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
async-trait = "0.1"
